package S201250215;

public interface Sorter {

    public void load(int[] elements);

    public void sort();

    public String getPlan();

}
